test/bad/func_def_later.dws
void main() {
    b() // will not compile
    
    void b() {
        print("defined later")
    }
    
    b() // OK
}
